--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "shaka-video-element",
-  "version": "0.0.6",
-  "description": "Custom element (web component) for Shaka Player",
-  "type": "module",
-  "main": "dist/shaka-video-element.js",
-  "files": [
-    "./dist/*",
-    "README.md",
-    "index.html"
-  ],
-  "scripts": {
-    "build": "rm -rf dist && rollup --config",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "publish-patch": "yarn run build && np patch --no-tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/muxinc/shaka-video-element.git"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "keywords": [
-    "shaka",
-    "video",
-    "player"
-  ],
-  "author": "@muxinc",
-  "license": "MIT",
-  "dependencies": {
-    "custom-video-element": "^0.0.2",
-    "shaka-player": "^4.2.2"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "np": "^6.2.0",
-    "rollup": "^2.2.0",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-terser": "^5.3.0"
-  }
+	"name": "shaka-video-element",
+	"version": "0.0.6",
+	"description": "Custom element (web component) for Shaka Player",
+	"type": "module",
+	"main": "../../public/shaka-video-element.js",
+	"files": [
+		"./dist/*",
+		"README.md",
+		"index.html"
+	],
+	"scripts": {
+		"build": "rm -rf dist && rollup --config",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"publish-patch": "yarn run build && np patch --no-tests"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/muxinc/shaka-video-element.git"
+	},
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org"
+	},
+	"keywords": [
+		"shaka",
+		"video",
+		"player"
+	],
+	"author": "@muxinc",
+	"license": "MIT",
+	"dependencies": {
+		"custom-video-element": "^0.0.2",
+		"shaka-player": "^4.7.11"
+	},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"np": "^10.0.0",
+		"rollup": "^4.12.1",
+		"rollup-plugin-babel-minify": "^10.0.0",
+		"rollup-plugin-terser": "^5.3.0"
+	}
 }
